eks_infra/bastion_server/security_group.tf
resource "aws_security_group" "allow_http_ssh_SG" {
  name        = "${var.project}_allow_ssh_http_SG"
  description = "Allow SSH and HTTP traffic"
  vpc_id      = var.vpc_id

    ingress {
        description      = "SSH"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    ingress {
        description      = "HTTP"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}
